@@ -1,7 +1,10 @@
 -----------------------------------------------------------------------------------------
-	$Id: ChangeLog,v 1.36 2007-07-09 01:58:52 remko Exp $
+	$Id: ChangeLog,v 1.37 2007-07-10 03:34:57 guru Exp $
 -----------------------------------------------------------------------------------------
 
+2007-07-09	pwessel
+	* misc/gmtdigitize.c	Wrong coordinates used to calculate rms misfit
+	
 2007-07-08	pwessel
 	* gmt_init.c:		Suffices h|+|- in -J were mistaken for units
 	* gmt_io.c:		Blank lines were not recognized under cygwin/SFU
